@@ -5,6 +5,7 @@ Maintained since version 0.3.1.
 
 2012-01-24  Camilla Berglund  <elmindreda@elmindreda.org>
 
+ * duffdriver.c (process_directory): Renamed from recurse_directory.
  * duff.h (EntryList): Renamed from List.
  * duffentry.c (get_entry_sample, get_entry_digest, compare_entry_contents):
  Improved error reporting.
